Style updates to prevent layout shift
Former-commit-id: 908621a446999975aed95f4a09176c84bcb6e6b8

--- a/styles/global/dark.scss
+++ b/styles/global/dark.scss
@@ -321,7 +321,7 @@ body[data-theme="dark-mode"] {
     color: $white;
     border-bottom-color: $gray-80;
 
-    pre.line-numbers {
+    pre {
       background-color: transparent;
     }
   }
